--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    example for shape rotation. 
 	    </footer>
 	</body>
 </html>
