--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Rotation Example</h1>
 		</header>
 			<section id="content">
-				<canvas id="rotationExample" data-processing-sources="rotationExample.pde">
+				<canvas id="rotationExample" data-processing-sources="VertexLoop.pde">
 				</canvas>
 		    </section>
 	    <footer>
