--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Rotation Example</h1>
+			<h1>Vertex Shape Loop Example</h1>
 		</header>
 			<section id="content">
 				<canvas id="rotationExample" data-processing-sources="VertexLoop.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    example for shape rotation. 
+		    Example for a loop to decrease a vertex shape. 
 	    </footer>
 	</body>
 </html>
