--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Rotation Example</title>
+		<title>Vertex Loop Example</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -11,7 +11,7 @@
 			<h1>Vertex Shape Loop Example</h1>
 		</header>
 			<section id="content">
-				<canvas id="rotationExample" data-processing-sources="VertexLoop.pde">
+				<canvas id="VertexLoopExample" data-processing-sources="VertexLoop.pde">
 				</canvas>
 		    </section>
 	    <footer>
